--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "tresdp",
   "version": "1.0.0",
@@ -6,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run tunnel\" \"npm --prefix backend run dev\" \"npm --prefix frontend run dev\"",
-    "tunnel": "ssh -L 3306:localhost:3306 httpswwwtresdpcomar@35.198.30.94 -p 27167"
+    "tunnel": "ssh -L 3306:localhost:3306 httpswwwtresdpcomar@35.198.30.94 -p 27167",
+    "server": "npm --prefix backend run dev",
+    "client": "npm --prefix frontend run dev",
+    "electron": "electron main.js",
+    "dev": "concurrently \"npm run tunnel\" \"npm run server\" \"npm run client\" "
   },
   "repository": {
     "type": "git",
@@ -22,8 +24,7 @@
   },
   "homepage": "https://github.com/cabrejae/tresdp#readme",
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "electron": "^35.1.5"
   }
-
-
 }
