--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/cabrejae/tresdp#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.27.1",
     "concurrently": "^9.1.2",
     "electron": "^35.1.5"
   }
