--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "homepage": "https://github.com/cabrejae/tresdp#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.27.1",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.2",
-    "electron": "^35.1.5"
+    "electron": "^35.1.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5"
   }
 }
